--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "react": "^16.3.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.1",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "resolve": "1.6.0",
     "sass-loader": "^6.0.7",
     "style-loader": "0.19.0",
